@@ -1,5 +1,16 @@
 const {Schema, model} = require('mongoose')
 
+const reviewSchema = new Schema(
+    {
+      name: { type: String, required: true },
+      rating: { type: Number, default: 0 },
+      comment: { type: String, required: true },
+    },
+    {
+      timestamps: true,
+    }
+);
+
 const schema = new Schema({
     name: { type: String, required: true },
     image: { type: String, required: true },
@@ -10,6 +21,7 @@ const schema = new Schema({
     description: { type: String, required: true },
     rating: { type: Number, default: 0, required: true },
     numReviews: { type: Number, default: 0, required: true },
+    reviews: [reviewSchema],
 })
 
 module.exports = model('Product', schema)
