@@ -1,84 +1,193 @@
 import React, { useEffect, useState } from 'react';
 import { Link } from 'react-router-dom';
 import { useSelector, useDispatch} from 'react-redux';
-import { detailsProduct } from '../redux/actions/productActions';
+import { detailsProduct, saveProductReview } from '../redux/actions/productActions';
+import { PRODUCT_REVIEW_SAVE_RESET } from '../redux/types/productConstants';
+import { Rating } from '../components/Rating';
 
 export const  ProductPage = (props) => {
   const [qty, setQty] = useState(1);
-  const productDetails = useSelector(state => state.productDetails);
+  const [rating, setRating] = useState(0);
+  const [comment, setComment] = useState('');
+  const userSignin = useSelector((state) => state.userSignin);
+  const { userInfo } = userSignin;
+  const productDetails = useSelector((state) => state.productDetails);
   const { product, loading, error } = productDetails;
+  const productReviewSave = useSelector((state) => state.productReviewSave);
+  const { success: productSaveSuccess } = productReviewSave;
   const dispatch = useDispatch();
 
+  // useEffect(() => {
+  //   dispatch(detailsProduct(props.match.params.id));
+  //   return () => {
+  //     //
+  //   };
+  // }, []);
+  
   useEffect(() => {
+    if (productSaveSuccess) {
+      alert('Review submitted successfully.');
+      setRating(0);
+      setComment('');
+      dispatch({ type: PRODUCT_REVIEW_SAVE_RESET });
+    }
     dispatch(detailsProduct(props.match.params.id));
     return () => {
       //
     };
-  }, [dispatch, props.match.params.id]);
+  }, [productSaveSuccess]);
 
-  const  changeValueHandler = (e) =>
-  {
-    setQty(e.target.value) 
-  }
+  const submitHandler = (e) => {
+    e.preventDefault();
+    // dispatch actions
+    dispatch(
+      saveProductReview(props.match.params.id, {
+        name: userInfo.name,
+        rating: rating,
+        comment: comment,
+      })
+    );
+  };
 
   const handleAddToCart = () => {
-    props.history.push(`/cart/${props.match.params.id}?qty=${qty}`)
-  }
+    props.history.push('/cart/' + props.match.params.id + '?qty=' + qty);
+  };
 
   return (
     <div>
-        <div className="back-to-result">
+      <div className="back-to-result">
         <Link to="/">Back to result</Link>
-        </div>
-        { loading ? <div>Loading...</div> :
-          error ? <div>{error} </div> :
-            <div className="details">
+      </div>
+      {loading ? (
+        <div>Loading...</div>
+      ) : error ? (
+        <div>{error} </div>
+      ) : (
+        <>
+          <div className="details">
             <div className="details-image">
-                <img src={product.image} alt="product" ></img>
+              <img src={product.image} alt="product"></img>
             </div>
             <div className="details-info">
-                <ul>
+              <ul>
                 <li>
-                    <h4>{product.name}</h4>
+                  <h4>{product.name}</h4>
                 </li>
                 <li>
-                    {product.rating} Stars ({product.numReviews} Reviews)
+                  <a href="#reviews">
+                    <Rating
+                      value={product.rating}
+                      text={product.numReviews + ' reviews'}
+                    />
+                  </a>
                 </li>
                 <li>
-                    Price: <b>${product.price}</b>
+                  Price: <b>${product.price}</b>
                 </li>
                 <li>
-                    Description:
-                    <div>
-                    {product.description}
-                    </div>
+                  Description:
+                  <div>{product.description}</div>
                 </li>
-                </ul>
+              </ul>
             </div>
             <div className="details-action">
-                <ul>
+              <ul>
+                <li>Price: {product.price}</li>
                 <li>
-                    Price: {product.price}
+                  Status:{' '}
+                  {product.countInStock > 0 ? 'In Stock' : 'Unavailable.'}
                 </li>
                 <li>
-                    Status: {product.countInStock > 0 ? "In Stock" : "Unavailable."}
+                  Qty:{' '}
+                  <select
+                    value={qty}
+                    onChange={(e) => {
+                      setQty(e.target.value);
+                    }}
+                  >
+                    {[...Array(product.countInStock).keys()].map((x) => (
+                      <option key={x + 1} value={x + 1}>
+                        {x + 1}
+                      </option>
+                    ))}
+                  </select>
                 </li>
                 <li>
-                    Qty: <select value={qty} onChange={changeValueHandler}>
-                    {[...Array(product.countInStock).keys()].map(x =>
-                      <option key={x + 1} value={x + 1}>{x + 1}</option>
-                    )}
-                    </select>
+                  {product.countInStock > 0 && (
+                    <button
+                      onClick={handleAddToCart}
+                      className="button primary"
+                    >
+                      Add to Cart
+                    </button>
+                  )}
                 </li>
-                <li>
-                    {product.countInStock > 0 && 
-                    <button onClick={handleAddToCart} className="button primary" >Add to Cart</button>}
-                </li>
-                </ul>
+              </ul>
             </div>
+          </div>
+          <div className="content-margined">
+            <h2>Reviews</h2>
+            { product.reviews && 
+              <ul className="review" id="reviews">
+              { !product.reviews.length && <div>There is no review</div>}
+              {product.reviews.map((review) => (
+                <li key={review._id}>
+                  <div>{review.name}</div>
+                  <div>
+                    <Rating value={review.rating}></Rating>
+                  </div>
+                  <div>{review.createdAt.substring(0, 10)}</div>
+                  <div>{review.comment}</div>
+                </li>
+              ))}
+                <li>
+                <h3>Write a customer review</h3>
+                {userInfo ? (
+                  <form onSubmit={submitHandler}>
+                    <ul className="form-container">
+                      <li>
+                        <label htmlFor="rating">Rating</label>
+                        <select
+                          name="rating"
+                          id="rating"
+                          value={rating}
+                          onChange={(e) => setRating(e.target.value)}
+                        >
+                          <option value="1">1- Poor</option>
+                          <option value="2">2- Fair</option>
+                          <option value="3">3- Good</option>
+                          <option value="4">4- Very Good</option>
+                          <option value="5">5- Excelent</option>
+                        </select>
+                      </li>
+                      <li>
+                        <label htmlFor="comment">Comment</label>
+                        <textarea
+                          name="comment"
+                          value={comment}
+                          onChange={(e) => setComment(e.target.value)}
+                        ></textarea>
+                      </li>
+                      <li>
+                        <button type="submit" className="button primary">
+                          Submit
+                        </button>
+                      </li>
+                    </ul>
+                  </form>
+                ) : (
+                  <div>
+                    Please <Link to="/signin">Sign-in</Link> to write a review.
+                  </div>
+                )}
+              </li>
+            </ul>
+            }
+            {/* { product.reviews.length && <div>There is no review</div>} */}
 
-            </div>
-        }
+          </div>
+        </>
+      )}
     </div>
-  )
+  );
 }
