@@ -1,9 +1,13 @@
-import { PRODUCT_LIST_REQUEST, PRODUCT_LIST_SUCCESS,
+import { 
+  PRODUCT_LIST_REQUEST, PRODUCT_LIST_SUCCESS,
   PRODUCT_LIST_FAIL, PRODUCT_DETAILS_REQUEST,
   PRODUCT_DETAILS_SUCCESS, PRODUCT_DETAILS_FAIL,
   PRODUCT_SAVE_REQUEST, PRODUCT_SAVE_SUCCESS,
   PRODUCT_SAVE_FAIL, PRODUCT_DELETE_REQUEST,
-  PRODUCT_DELETE_SUCCESS, PRODUCT_DELETE_FAIL} from "./types/productConstants"
+  PRODUCT_DELETE_SUCCESS, PRODUCT_DELETE_FAIL, 
+  PRODUCT_REVIEW_SAVE_REQUEST, PRODUCT_REVIEW_SAVE_SUCCESS, 
+  PRODUCT_REVIEW_SAVE_FAIL, PRODUCT_REVIEW_SAVE_RESET
+} from "./types/productConstants"
 
 const productListReducer = (state = { products: [] }, action) => {
     switch (action.type) {
@@ -60,4 +64,19 @@ const productSaveReducer = (state = { product: {} }, action) => {
   }
 }
 
-export { productListReducer, productDetailsReducer, productSaveReducer, productDeleteReducer}
+const productReviewSaveReducer = (state = {}, action) => {
+  switch (action.type) {
+    case PRODUCT_REVIEW_SAVE_REQUEST:
+      return { loading: true };
+    case PRODUCT_REVIEW_SAVE_SUCCESS:
+      return { loading: false, review: action.payload, success: true };
+    case PRODUCT_REVIEW_SAVE_FAIL:
+      return { loading: false, errror: action.payload };
+    case PRODUCT_REVIEW_SAVE_RESET:
+      return {};
+    default:
+      return state;
+  }
+}
+
+export { productListReducer, productDetailsReducer, productSaveReducer, productDeleteReducer, productReviewSaveReducer}
