@@ -13,3 +13,8 @@ export const PRODUCT_SAVE_FAIL = 'PRODUCT_SAVE_FAIL';
 export const PRODUCT_DELETE_REQUEST = 'PRODUCT_DELETE_REQUEST';
 export const PRODUCT_DELETE_SUCCESS = 'PRODUCT_DELETE_SUCCESS';
 export const PRODUCT_DELETE_FAIL = 'PRODUCT_DELETE_FAIL';
+
+export const PRODUCT_REVIEW_SAVE_REQUEST = 'PRODUCT_REVIEW_SAVE_REQUEST';
+export const PRODUCT_REVIEW_SAVE_SUCCESS = 'PRODUCT_REVIEW_SAVE_SUCCESS';
+export const PRODUCT_REVIEW_SAVE_FAIL = 'PRODUCT_REVIEW_SAVE_FAIL';
+export const PRODUCT_REVIEW_SAVE_RESET = 'PRODUCT_REVIEW_SAVE_RESET';
